<resources>
    <string name="app_name">Sajilo Activation</string>
    <string name="subsc_app_form">Subscriber Application Form</string>
    <string name="title">Title: </string>
    <string name="applicants_name">Applicant\'s Name</string>
    <string name="gender">Gender: </string>
    <string name="nationality">Nationality: </string>
    <string name="identification">Identification</string>
    <string name="or">or</string>
    <string name="passport_no">Passport No</string>
    <string name="citizen_no">Citizenship No</string>
    <string name="address">Address</string>
    <string name="house_no">House No</string>
    <string name="ward_no">Ward No</string>
    <string name="contact_no">Contact No</string>
    <string name="email">Email</string>
    <string name="occupation">Occupation</string>
    <string name="private_job">Private Job</string>
    <string name="government_job">Government Job</string>
    <string name="non_profitable_job">Non Profitable</string>
    <string name="self_employed">Self Employed</string>
    <string name="district">District</string>
    <string name="vdc_municipality">VDC/Municiplaity</string>
    <string name="tole_street_name">Tole/Street Name</string>
    <string name="service_details">Service Details</string>
    <string name="subscription_type">Subscription Type: </string>
    <string name="user_id">User Id</string>
    <string name="service_types">Service Types</string>
    <string name="ftth">FTTH</string>
    <string name="cable_internet">Cable Internet</string>
    <string name="clear_tv">Clear TV</string>
    <string name="login_submit"><![CDATA[Login & Submit]]></string>
    <string name="contact_details">Contact Details</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="sign">Sign</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_crop">Crop</string>

    <string-array name="salutations">
        <item>Mr.</item>
        <item>Ms.</item>
        <item>Others</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string-array name="nationality">
        <item>Nepali</item>
        <item>Others</item>
    </string-array>
    <string-array name="subscription_type">
        <item>Residential</item>
        <item>Enterprise</item>
    </string-array>
    <string-array name="box_card">
        <item>Box Number</item>
        <item>Card Number</item>
    </string-array>

    <string name="permission_rationale_camera">This lets you use your camera for this app.\n\nTo enable this, click App Settings below and activate Camera under the Permissions menu.</string>
    <string name="permission_rationale_storage">This lets you access your gallery for this app.\n\nTo enable this, click App Settings below and activate Storage under the Permissions menu.</string>
    <string name="permission_rationale_camera_storage">This lets you use your camera and access gallery for this app.\n\nTo enable this, click App Settings below and activate Camera and Storage under the Permissions menu.</string>
    <string name="applicant_photo">Applicant\'s Photo</string>
    <string name="next">Next</string>
    <string name="capture_photo">Take Photos</string>
    <string name="type">Type</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string-array name="districts">
        <item>	Achham	</item>
        <item>	Arghakhanchi	</item>
        <item>	Baglung	</item>
        <item>	Baitadi	</item>
        <item>	Bajhang	</item>
        <item>	Bajura	</item>
        <item>	Banke	</item>
        <item>	Bara	</item>
        <item>	Bardiya	</item>
        <item>	Bhaktapur	</item>
        <item>	Bhojpur	</item>
        <item>	Chitawan	</item>
        <item>	Dadeldhura	</item>
        <item>	Dailekh	</item>
        <item>	Dang	</item>
        <item>	Darchula	</item>
        <item>	Dhading	</item>
        <item>	Dhankuta	</item>
        <item>	Dhanusa	</item>
        <item>	Dolakha	</item>
        <item>	Dolpa	</item>
        <item>	Doti	</item>
        <item>	East Nawalparasi	</item>
        <item>	East Rukum	</item>
        <item>	Gorkha	</item>
        <item>	Gulmi	</item>
        <item>	Humla	</item>
        <item>	Ilam	</item>
        <item>	Jajarkot	</item>
        <item>	Jhapa	</item>
        <item>	Jumla	</item>
        <item>	Kailali	</item>
        <item>	Kalikot	</item>
        <item>	Kanchanpur	</item>
        <item>	Kapilbastu	</item>
        <item>	Kaski	</item>
        <item>	Kathmandu	</item>
        <item>	Kavrepalanchok	</item>
        <item>	Khotang	</item>
        <item>	Lalitpur	</item>
        <item>	Lamjung	</item>
        <item>	Mahottari	</item>
        <item>	Makawanpur	</item>
        <item>	Manang	</item>
        <item>	Morang	</item>
        <item>	Mugu	</item>
        <item>	Mustang	</item>
        <item>	Myagdi	</item>
        <item>	Nuwakot	</item>
        <item>	Okhaldhunga	</item>
        <item>	Palpa	</item>
        <item>	Panchthar	</item>
        <item>	Parbat	</item>
        <item>	Parsa	</item>
        <item>	Pyuthan	</item>
        <item>	Ramechhap	</item>
        <item>	Rasuwa	</item>
        <item>	Rautahat	</item>
        <item>	Rolpa	</item>
        <item>	Rupandehi	</item>
        <item>	Salyan	</item>
        <item>	Sankhuwasabha	</item>
        <item>	Saptari	</item>
        <item>	Sarlahi	</item>
        <item>	Sindhuli	</item>
        <item>	Sindhupalchok	</item>
        <item>	Siraha	</item>
        <item>	Solukhumbu	</item>
        <item>	Sunsari	</item>
        <item>	Surkhet	</item>
        <item>	Syangja	</item>
        <item>	Tanahu	</item>
        <item>	Taplejung	</item>
        <item>	Terhathum	</item>
        <item>	Udayapur	</item>
        <item>	West Nawalparasi	</item>
        <item>	West Rukum	</item>

    </string-array>

    <string-array name="identification_type">
        <item>Citizenship No</item>
        <item>Passport No</item>
    </string-array>

    <string name="grant_type">password</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>

    <string name="box_number">Box Number</string>
    <string name="card_number">Card Number</string>
    <string name="right">Right</string>
    <string name="left">Left</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="scan_barcode_card">Child Box 1#</string>
    <string name="scan_barcode_card2">Child Box 2#</string>
    <string name="scan_barcode_box">Primary Box #</string>
    <string name="modem_mac">Modem MAC</string>
    <string name="setting">Settings</string>
    <string name="skip_validation">Skip Validation</string>
    <string name="alt_contact_mobile_no">Optional Contact/Mobile no</string>
    <string name="identity">Identity Photo</string>
    <string name="tncPhoto"><![CDATA[T&C Photo]]></string>
    <string name="mobile_no">Mobile No</string>
    <string name="init_fake">Populate data</string>
    <string name="no_barcode">No Barcode</string>
    <string name="no_sign">No Sign</string>
    <string name="no_bar_no_sign">No Bar No Sign</string>
    <string name="all">All</string>

</resources>
