<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/logout"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_skip_validation"
        android:icon="@drawable/ic_gesture_black_24dp"
        android:title="@string/skip_validation"
        android:visible="false"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_init_fake"
        android:icon="@drawable/ic_barcode_scan_white_24dp"
        android:title="@string/init_fake"
        android:visible="false"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_no_barcode"
        android:icon="@drawable/ic_gesture_black_24dp"
        android:title="@string/no_barcode"
        android:visible="false"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_no_sign"
        android:icon="@drawable/ic_barcode_scan_white_24dp"
        android:title="@string/no_sign"
        android:visible="false"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_no_bar_no_sign"
        android:icon="@drawable/ic_barcode_scan_white_24dp"
        android:title="@string/no_bar_no_sign"
        android:visible="false"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_all"
        android:icon="@drawable/ic_barcode_scan_white_24dp"
        android:title="@string/all"
        android:visible="false"
        app:showAsAction="collapseActionView"/>

</menu>