<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.cleartv.Signature">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
                android:text="@string/back" />

            <View
                android:layout_width="@dimen/spc_1"
                android:layout_height="@dimen/spc_30"
                android:background="@color/colorGray" />

            <Button
                android:id="@+id/btn_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btn_back"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_cancel_black_24dp"
                android:text="@string/clear" />

            <View
                android:layout_width="@dimen/spc_1"
                android:layout_height="@dimen/spc_30"
                android:background="@color/colorGray" />

            <Button
                android:id="@+id/btn_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btn_clear"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_save_black_24dp"
                android:text="@string/save" />
        </LinearLayout>

        <com.simplify.ink.InkView
            android:id="@+id/ink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ll_actions"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
